# kite

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  T03-COMPLETION.md  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  summary.md  tailwind.config.js  test-bundle.mjs  test-fix.mjs  test-full.mjs  test-gfm.mjs  test-hname.mjs  test-parse.mjs  test-react-fix.mjs  test-react.mjs  test-rehype.mjs  test-walk.mjs  tsconfig.json  vite.config.ts
docs/: perf.md  release-notes.md  security-audit-exceptions.md
e2e/: diagrams.spec.ts  export-html.spec.ts  export-pdf.spec.ts  export-visibility.spec.ts  external-editor.spec.ts  file-tree.spec.ts  frontmatter.spec.ts  fullscreen.spec.ts  history.spec.ts  i18n.spec.ts  link-safety.spec.ts  recent-dirs.spec.ts  wikilink.spec.ts
samples/: hello.md  table.md  with-script.md
scripts/: append-release-notes.mjs  check-bundle-config.mjs  check-console-drop.mjs  check-contract.mjs  check-contrast.mjs  check-csp.mjs  check-deps.mjs  check-i18n-hardcode.mjs  check-manual-chunks.mjs  check-no-display-revert.mjs  (+8 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/entitlements/: Info.plist  entitlements.plist
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  pending_open.rs
src-tauri/src/services/: clipboard.rs  exporter.rs  external.rs  external_editor.rs  file_fresh.rs  fs_reader.rs  markdown_file.rs  mod.rs  preferences.rs  progress.rs  recent_dirs.rs  recent_files.rs
(+257 files in other folders)
